deleted get and delete route for feelings, because they aren't neccessary
